vlib/v/checker/tests/type_alias_decl_parent_type_generic_struct_no_concrete_type_err.out
vlib/v/checker/tests/type_alias_decl_parent_type_generic_struct_no_concrete_type_err.vv:2:16: error: MyStruct type is generic struct, must specify the generic type names, e.g. MyStruct[int]
    1 | struct MyStruct[T] { t T }
    2 | type MyAlias = MyStruct[T]
      |                ~~~~~~~~~~~
    3 | type MyAlias2 = MyStruct
vlib/v/checker/tests/type_alias_decl_parent_type_generic_struct_no_concrete_type_err.vv:3:17: error: MyStruct type is generic struct, must specify the generic type names, e.g. MyStruct[int]
    1 | struct MyStruct[T] { t T }
    2 | type MyAlias = MyStruct[T]
    3 | type MyAlias2 = MyStruct
      |                 ~~~~~~~~
